[gd_scene load_steps=9 format=3 uid="uid://b7e6bc8txhxb0"]

[ext_resource type="Texture2D" uid="uid://du4073mlbkhda" path="res://assets/Extra/Main_menu_image.png" id="1_7y44g"]
[ext_resource type="Script" path="res://scenes/mainmenu.gd" id="1_hsydy"]
[ext_resource type="Script" path="res://anim_com.gd" id="2_22okb"]
[ext_resource type="Theme" uid="uid://bcsi4fb6byuhj" path="res://ui/main_menu_buttons.tres" id="2_nw058"]
[ext_resource type="Texture2D" uid="uid://djfqjq5i0upe0" path="res://assets/Extra/LOGO.png" id="5_6yxsg"]
[ext_resource type="AudioStream" uid="uid://cug1nndb5bas8" path="res://assets/sfx/Menu.ogg" id="6_1bd11"]
[ext_resource type="AudioStream" uid="uid://kwvabidbgqj7" path="res://assets/sfx/UI Soundpack/OGG/Retro2.ogg" id="6_msanu"]
[ext_resource type="AudioStream" uid="uid://di74ux212fsqe" path="res://assets/sfx/UI Soundpack/OGG/Retro1.ogg" id="7_jj7lc"]

[node name="mainmenu" type="Node2D"]
script = ExtResource("1_hsydy")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(573, 324)
scale = Vector2(0.895312, 0.902778)
texture = ExtResource("1_7y44g")

[node name="start_button" type="Button" parent="."]
offset_left = 778.0
offset_top = 209.0
offset_right = 940.0
offset_bottom = 260.0
rotation = 0.0959931
theme = ExtResource("2_nw058")
text = "START"

[node name="anim_com" type="Node" parent="start_button"]
script = ExtResource("2_22okb")
hover_scale = Vector2(1.3, 1.2)
time = 0.5
transition_type = 10

[node name="click_button" type="AudioStreamPlayer" parent="start_button"]
stream = ExtResource("7_jj7lc")
bus = &"SFX"

[node name="hover_button" type="AudioStreamPlayer" parent="start_button"]
stream = ExtResource("6_msanu")
bus = &"SFX"

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(514, 107)
scale = Vector2(0.175293, 0.187778)
texture = ExtResource("5_6yxsg")

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1bd11")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
